<resources>
    <string name="app_name">HW2_UsersFromService</string>
    <string name="update">Update</string>
    <string name="clear">Clear</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="created">Created:</string>
    <string name="balance">Balance:</string>
</resources>
